[package]
name = "pngs"
description = "A simple wasm png encoder/decoder module for deno"
repository = "https://github.com/denosaurs/images"
license = "MIT"
version = "0.1.0"
authors = ["Elias Sjögreen"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde-wasm-bindgen = "=0.6.3"
png = "0.16.8"

[profile.release]
lto = true